src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_char_multiple_parameters.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error[E037]: Invalid assignment: cannot assign 'REAL' to 'CHAR'
   ┌─ <internal>:15:14
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │              ^^^^^^^^ Invalid assignment: cannot assign 'REAL' to 'CHAR'

error[E062]: Invalid type nature for generic argument. REAL is no ANY_CHAR
   ┌─ <internal>:15:14
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │              ^^^^^^^^ Invalid type nature for generic argument. REAL is no ANY_CHAR

error[E037]: Invalid assignment: cannot assign 'UDINT' to 'CHAR'
   ┌─ <internal>:15:24
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                        ^^^^^^^^^^^^ Invalid assignment: cannot assign 'UDINT' to 'CHAR'

error[E062]: Invalid type nature for generic argument. UDINT is no ANY_CHAR
   ┌─ <internal>:15:24
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                        ^^^^^^^^^^^^ Invalid type nature for generic argument. UDINT is no ANY_CHAR

error[E037]: Invalid assignment: cannot assign 'DINT' to 'CHAR'
   ┌─ <internal>:15:38
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                      ^^^^^^^^^^ Invalid assignment: cannot assign 'DINT' to 'CHAR'

error[E062]: Invalid type nature for generic argument. DINT is no ANY_CHAR
   ┌─ <internal>:15:38
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                      ^^^^^^^^^^ Invalid type nature for generic argument. DINT is no ANY_CHAR

error[E037]: Invalid assignment: cannot assign 'TIME' to 'CHAR'
   ┌─ <internal>:15:50
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                  ^^^^^^^^ Invalid assignment: cannot assign 'TIME' to 'CHAR'

error[E062]: Invalid type nature for generic argument. TIME is no ANY_CHAR
   ┌─ <internal>:15:50
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                  ^^^^^^^^ Invalid type nature for generic argument. TIME is no ANY_CHAR

error[E037]: Invalid assignment: cannot assign 'BYTE' to 'CHAR'
   ┌─ <internal>:15:60
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                            ^^^^^^^^ Invalid assignment: cannot assign 'BYTE' to 'CHAR'

error[E062]: Invalid type nature for generic argument. BYTE is no ANY_CHAR
   ┌─ <internal>:15:60
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                            ^^^^^^^^ Invalid type nature for generic argument. BYTE is no ANY_CHAR

error[E037]: Invalid assignment: cannot assign 'STRING' to 'CHAR'
   ┌─ <internal>:15:70
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                                      ^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'CHAR'

error[E062]: Invalid type nature for generic argument. STRING is no ANY_CHAR
   ┌─ <internal>:15:70
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                                      ^^^^^^^ Invalid type nature for generic argument. STRING is no ANY_CHAR

error[E037]: Invalid assignment: cannot assign 'DATE' to 'CHAR'
   ┌─ <internal>:15:89
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                                                         ^^^^^^^^ Invalid assignment: cannot assign 'DATE' to 'CHAR'

error[E062]: Invalid type nature for generic argument. DATE is no ANY_CHAR
   ┌─ <internal>:15:89
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                                                         ^^^^^^^^ Invalid type nature for generic argument. DATE is no ANY_CHAR
